# Drone_STI

./: Boulder flight control hardware.pptx
docs/: Drone Development Roadmap.pptx
flight_code/: AHRS_INTEGRATION.md
flight_code/autocode/ground_test_EMF_ert_rtw/: CMakeLists.txt  autocode.cpp  autocode.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
flight_code/autocode/ground_test_EMF_ert_rtw/html/: traceInfo.mat
flight_code/autocode/ground_test_EMF_ert_rtw/html/data/: data.js  model.js  pages.js
flight_code/autocode/ground_test_EMF_ert_rtw/html/pages/: ground_test_EMF_coderassumptions.html  ground_test_EMF_interface.html  ground_test_EMF_replacements.html  ground_test_EMF_subsystems.html  ground_test_EMF_survey.html  ground_test_EMF_trace.html  ground_test_EMF_traceInfo.js
flight_code/autocode/ground_test_EMF_ert_rtw/tmwinternal/: simulink_cache.xml  tr
flight_code/autocode/ground_test_EMF_new_ert_rtw/: CMakeLists.txt  autocode.cpp  autocode.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
flight_code/autocode/ground_test_EMF_new_ert_rtw/html/: traceInfo.mat
flight_code/autocode/ground_test_EMF_new_ert_rtw/html/data/: data.js  model.js  pages.js
flight_code/autocode/ground_test_EMF_new_ert_rtw/html/pages/: ground_test_EMF_new_coderassumptions.html  ground_test_EMF_new_interface.html  ground_test_EMF_new_replacements.html  ground_test_EMF_new_subsystems.html  ground_test_EMF_new_survey.html  ground_test_EMF_new_trace.html  ground_test_EMF_new_traceInfo.js
flight_code/autocode/ground_test_EMF_new_ert_rtw/tmwinternal/: simulink_cache.xml  tr
flight_code/autocode/slprj/ert/_sharedutils/: shared_file.dmr
flight_code/autocode/slprj/ert/ground_test_EMF/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat  scv
flight_code/autocode/slprj/ert/ground_test_EMF_new/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat  scv
flight_code/build_johnny/slprj/: ground_test_EMF.slxc  ground_test_EMF_new.slxc
flight_code/build_johnny/slprj/slprj/_jitprj/: jitEngineAccessInfo.mat  sD04d0O48RtNuZsq2gyKsyB.l  sD04d0O48RtNuZsq2gyKsyB.mat  sfkSY35H4mQfCLdY13rUNXG.l  sfkSY35H4mQfCLdY13rUNXG.mat
flight_code/build_johnny/slprj/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sD04d0O48RtNuZsq2gyKsyB.mat  sfkSY35H4mQfCLdY13rUNXG.mat
flight_code/build_johnny/slprj/slprj/_sfprj/ground_test_EMF/: amsi_serial.mat
flight_code/build_johnny/slprj/slprj/_sfprj/ground_test_EMF_new/: amsi_serial.mat
flight_code/build_johnny/slprj/slprj/_sfprj/precompile/: 9gh64CAPUrVAdNh8DMscwF.mat  B7JQdFYjqcxmG4KlUNdiLH.mat  autoInferAccessInfo.mat
flight_code/build_johnny/slprj/slprj/sim/varcache/ground_test_EMF/: checksumOfCache.mat  varInfo.mat
flight_code/flight/: bfs-ins.cc  config.cc  flight.cc
flight_code/include/: global_defs.h
flight_code/include/flight/: mahony_ahrs.h
flight_test/: Drone Flight Test with EMF Controller.docx  PlotAtittudeEstimation.m  PostProcess.m  PostProcess_EMF.m
flight_test/flight_code/: ekf_15_state.h
flight_test/flight_code/build_johnny/slprj/slprj/_jitprj/: s20jNwxCmsAkG8DQdOYdcTH.l  s20jNwxCmsAkG8DQdOYdcTH.mat  s48IKF5kpX4MAPW4YnqlWCD.l  s48IKF5kpX4MAPW4YnqlWCD.mat  s8KxmjnxOikPUyL06VchrS.l  s8KxmjnxOikPUyL06VchrS.mat  sA4WFhUYELkW4oBEZfp7AfF.l  sA4WFhUYELkW4oBEZfp7AfF.mat  sGZHRBmvBjR8ctkmBN1yyUE.l  sGZHRBmvBjR8ctkmBN1yyUE.mat  sI7s9cjlnnqvzucqxX9sjAG.l  sI7s9cjlnnqvzucqxX9sjAG.mat  sJwclwOOgiqgMgMQ8KQMqdH.l  sJwclwOOgiqgMgMQ8KQMqdH.mat  sNU5gFet9thxiVLXDAEO9OB.l  sNU5gFet9thxiVLXDAEO9OB.mat  sSFUDbgefUieYvv3cz1ip2D.l  sSFUDbgefUieYvv3cz1ip2D.mat  sSuxRYcgEOak1Sy1sJ9W5UH.l  sSuxRYcgEOak1Sy1sJ9W5UH.mat  sTQkRSOzS4hOZBCMKLoSZMC.l  sTQkRSOzS4hOZBCMKLoSZMC.mat  sYesZhgBw5moA9RE0mXu1cE.l  sYesZhgBw5moA9RE0mXu1cE.mat  sYwSUOhyTqnMfoNdDfgAmF.l  sYwSUOhyTqnMfoNdDfgAmF.mat  sfu1tWCYDhSlGT4Peg6up8B.l  sfu1tWCYDhSlGT4Peg6up8B.mat  sgnFUo9wM093mxmSUx0vdfH.l  sgnFUo9wM093mxmSUx0vdfH.mat  skaUJqeGTbkEGjG9sN3R6rH.l  skaUJqeGTbkEGjG9sN3R6rH.mat  sl1CR7GxdEGlqCvRZntvDRE.l  sl1CR7GxdEGlqCvRZntvDRE.mat  smLPurvyPg8S0kFJqXAQn4F.l  smLPurvyPg8S0kFJqXAQn4F.mat  sqWpdXjEKKBNUVlkt8Cfq0E.l  sqWpdXjEKKBNUVlkt8Cfq0E.mat  ssdTcDMCNzHeqr2lD9Nq4rF.l  ssdTcDMCNzHeqr2lD9Nq4rF.mat  (+10 more)
flight_test/flight_code/flight/: bfs-ins.cc  config.cc  flight.cc
flight_test/flight_code/include/: global_defs.h  hardware_defs.h
flight_test/flight_code/include/flight/: mahony_ahrs.h
mat_converter/malt_build/: CMakeCache.txt  Drone Flight Test with EMF Controller.docx  Makefile  PostProcess.m  PostProcess_EMF.m  cmake_install.cmake  mat_converter
mat_converter/malt_build/3_11_26/: malt1_2.bfs  malt1_6.bfs
mat_converter/malt_build/3_13_26/: malt1_0.bfs
mat_converter/malt_build/3_18_26/: malt1_1.bfs  malt1_3.bfs  malt1_4.bfs
simulation/: InitializeController_Ground.m  InitializeDeployableEMF.m  setup.m
simulation/InitScripts/: InitalizeAircraftModel.m  InitalizeController.m  InitialCondition.m  InitializeAircraftModel.m  InitializeControllerPID.m  InitializeEMF.m  InitializeEnv.m  InitializeSensorModel.m  OnldInit.m  untitled.slx.autosave
simulation/InitScripts/SensorSim/: config.m  setup.m
simulation/InitScripts/SensorSim/aircraft/: johnny.m  sig_kadet.m  ultra_stick_25e.m
simulation/InitScripts/SensorSim/matlab/: trim.m
simulation/aircraft/: InitializeController_HoverTest.m  johnny.m  setupEMF.m
simulation/vms/: DeployableEMF.slx  ground_test_EMF_new.slx  ground_test_PID.slx
(+66 files in other folders)
